Update README & comments

--- a/calendar-analytics.ipynb
+++ b/calendar-analytics.ipynb
@@ -533,7 +533,7 @@
     }
    ],
    "source": [
-    "# Plot top meeting participants by number\n",
+    "# Plot top 10 meeting participants by count\n",
     "\n",
     "df.explode('attendee', ignore_index=True)['attendee'].value_counts()[:10].plot(\n",
     "    kind='barh', \n",
