--- a/calendar-analytics.ipynb
+++ b/calendar-analytics.ipynb
@@ -536,7 +536,7 @@
     "df.explode('ATTENDEE', ignore_index=True)['ATTENDEE'].value_counts()[:10].plot(\n",
     "    kind='barh', \n",
     "    grid=True,\n",
-    "    title='Most common partipants in meetings attended',\n",
+    "    title='Most common participants in meetings attended',\n",
     "    ylabel='% Meetings (by count)', \n",
     "    xlabel='Meeting attendee',\n",
     "    figsize=(20,7)\n",
